# CommerceSystemDemo

./: .dockerignore  .env.example  .env.remote.example  .env.server-logs.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.remote.yml  docker-compose.server-logs.yml  docker-compose.yml  pyproject.toml
.github/workflows/: python-application.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  categories.py  products.py  search.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  category.py  product.py
app/observability/: __init__.py  context.py  db.py  db_timing.py  logging.py  metrics.py  middleware.py  route.py  setup.py
app/schemas/: __init__.py  category.py  common.py  product.py
app/services/: __init__.py  category_service.py  product_service.py
app/templates/: index.html
observability/: loki-config.yaml  otel-collector-config.yaml  prometheus.remote.yml.tmpl  prometheus.yml  promtail-config.yaml  promtail.remote.yml.tmpl  tempo.yaml
observability/grafana/dashboards/: commerce-observability-p2.json  commerce-observability-p3.json  commerce-observability.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus-alerts/: commerce-alerts.yml
scripts/: load_test.py  migrate_indexes.py
tests/: conftest.py  test_api.py  test_api_unit.py  test_category_service.py  test_category_service_benchmark.py  test_concurrency.py  test_observability.py  test_search.py
(+1 files in other folders)
